# griptape-nodes-chatterbox-library

./: .gitmodules  Makefile  README.md  pyproject.toml
griptape_nodes_chatterbox_library/: __init__.py  chatterbox_library_advanced.py  griptape_nodes_library.json
griptape_nodes_chatterbox_library/chatterbox_nodes/: __init__.py  chatterbox_tts.py
