[project]
name = "griptape_nodes_chatterbox_library"
version = "0.1.0"
description = "Chatterbox TTS text-to-speech generation for Griptape Nodes"
authors = [
    {name = "Griptape, Inc.", email = "hello@griptape.ai"}
]
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "griptape-nodes",
]

[tool.uv.sources]
griptape-nodes = { git = "https://github.com/griptape-ai/griptape-nodes", rev="latest"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
